fix: update donate.html
Add section class="main-screen__donate" and picture

--- a/pages/donate/donate.html
+++ b/pages/donate/donate.html
@@ -48,15 +48,14 @@
 			</div>
 		</header>
 		<main class="content">
-			<section class="main-screen">
-				<div class="main-screen__container container">
-					<div class="main-screen__header">
-
-					</div>
-				</div>
-				<div class="main-screen__bg ibg">
-					<img src="../../assets/images/panda_sm.jpg" alt="Watch your favorite animal online">
-				</div>
+			<section class="main-screen__donate">
+				<picture>
+					<source srcset="../../assets/images/panda_bg.jpg" type="image/jpeg" media="(min-width:1001px)">
+					<source srcset="../../assets/images/bg_1000.jpg" type="image/jpeg" media="(min-width:641px)">
+					<source srcset="../../assets/images/bg_640.jpg" type="image/jpeg" media="(min-width:321px)">
+					<source srcset="../../assets/images/bg_320.jpg" type="image/jpeg" media="(max-width:320px)">
+					<img src="../../assets/images/panda_bg.jpg" alt="Watch your favorite animal online">
+				</picture>
 			</section>
 			<section class="pick-feed donate">
 				<div class="donate__container container">
