fix: change layout for form donation to fix bugs
fix: change layout for form donation to fix bugs

--- a/online-zoo3/pages/donate/donate.html
+++ b/online-zoo3/pages/donate/donate.html
@@ -49,6 +49,7 @@
 				</div>
 			</div>
 		</header>
+		<div class="shadow__block"></div>
 		<main class="content">
 			<section class="main-screen__donate">
 				<picture>
@@ -97,67 +98,53 @@
 								<div class="form-donate__form-title">Amount</div>
 								<div class="form-donate__form-slider">
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun1"
-										value="1">
+										value="2000">
 									<label for="radio-amoun1" class="form-donate__radio-amount-label" data-amount="$2000"
 										id="amoun1">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$2000</span>
 									</label>
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun2"
-										value="2">
+										value="1000">
 									<label for="radio-amoun2" class="form-donate__radio-amount-label" data-amount="$1000"
 										id="amoun2">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$1000</span>
 									</label>
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun3"
-										value="3" checked>
+										value="500" checked>
 									<label for="radio-amoun3" class="form-donate__radio-amount-label" data-amount="$500">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$500</span>
 									</label>
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun4"
-										value="4">
+										value="250">
 									<label for="radio-amoun4" class="form-donate__radio-amount-label" data-amount="$250">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$250</span>
 									</label>
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun5"
-										value="5">
+										value="100">
 									<label for="radio-amoun5" class="form-donate__radio-amount-label" data-amount="$100">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$100</span>
 									</label>
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun6"
-										value="6">
+										value="50">
 									<label for="radio-amoun6" class="form-donate__radio-amount-label" data-amount="$50">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$50</span>
 									</label>
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun7"
-										value="7">
+										value="25">
 									<label for="radio-amoun7" class="form-donate__radio-amount-label" data-amount="$25">
 										<span class="form-donate__radio-dot"></span>
-										<img class="form-donate__roller" src="../../assets/icons/roller_icon.svg"
-											alt="roller icon">
 										<span class="form-donate__radio-txt">$25</span>
 									</label>
 
