fix: update testimonials block change index.html
fix: update testimonials block change index.html

--- a/online-zoo3/pages/main/index.html
+++ b/online-zoo3/pages/main/index.html
@@ -375,7 +375,7 @@
 					<h2 class="testimonials__title">Testimonials</h2>
 					<div class="testimonials__items">
 						<!--value-->
-						<div class="testimonials__item item-testimonials" id="user_01" value="0">
+						<div class="testimonials__item item-testimonials" id="user_01">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -407,7 +407,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_02" value="1">
+						<div class="testimonials__item item-testimonials" id="user_02">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -441,7 +441,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_03" value="2">
+						<div class="testimonials__item item-testimonials" id="user_03">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -475,7 +475,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials popup-link" id="user_04" value="3">
+						<div class="testimonials__item item-testimonials popup-link" id="user_04">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 
@@ -511,7 +511,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_05" value="4">
+						<div class="testimonials__item item-testimonials" id="user_05">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -543,7 +543,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_06" value="5">
+						<div class="testimonials__item item-testimonials" id="user_06">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -577,7 +577,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_07" value="6">
+						<div class="testimonials__item item-testimonials" id="user_07">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -611,7 +611,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_08" value="7">
+						<div class="testimonials__item item-testimonials" id="user_08">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 
@@ -647,7 +647,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_09" value="8">
+						<div class="testimonials__item item-testimonials" id="user_09">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -679,7 +679,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_10" value="9">
+						<div class="testimonials__item item-testimonials" id="user_10">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -713,7 +713,7 @@
 								</div>
 							</a>
 						</div>
-						<div class="testimonials__item item-testimonials" id="user_11" value="10">
+						<div class="testimonials__item item-testimonials" id="user_11">
 							<a href="#popup" class="popup-link">
 								<div class="item-testimonials__author author-item">
 									<div class="author-item__avatar">
@@ -749,7 +749,7 @@
 						</div>
 					</div>
 					<div class="testimonials__slider">
-						<input type="range" class="range_btn" max="8" step="1" value="0" name="range">
+						<input type="range" class="range_btn" min="0" max="7" step="1" value="0" name="range">
 					</div>
 					<div>
 						<div class="testimonials__button"><a href="">Leave feedback</a></div>
