fix: add status active for input in form donate
fix: add status active for input in form donate

--- a/online-zoo3/pages/donate/donate.html
+++ b/online-zoo3/pages/donate/donate.html
@@ -129,7 +129,7 @@
 
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun5"
 										value="100">
-									<label for="radio-amoun5" class="form-donate__radio-amount-label" data-amount="$100">
+									<label for="radio-amoun5" class="form-donate__radio-amount-label active" data-amount="$100">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$100</span>
 									</label>
@@ -154,7 +154,7 @@
 									<div class="form-donate__form-amount">
 										<label for="formName" class="form__label"></label>
 										<input type="number" oninput="if (value.length>= 5) value = value.slice (0,4)"
-											placeholder="Another amount" value="" id="formName" name="name"
+											placeholder="Another amount" value="100" id="formName" name="name"
 											class="form__input _req" required>
 									</div>
 
