fix: update amount of cards and add some titles
fix: update amount of cards in pets slider and add some titles in testimonials

--- a/online-zoo3/pages/main/index.html
+++ b/online-zoo3/pages/main/index.html
@@ -94,131 +94,10 @@
 
 			<section class="pets">
 				<div class="pets_container container">
-					<!--slider__wrapper-->
-					<div class="pets__slider">
-						<!--slider__items-->
-						<div class="slider__items">
-							<div class="slider__item" id="card_01">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/card_01.jpg"
-											alt="Giant Pandas">
-									</div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Giant Pandas</p>
-												<p class="slider__location">Native to Southwest China</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/meet-fish.png"
-													alt="meet-fish">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="slider__item" id="card_02">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/card_02.jpg" alt="Eagles">
-									</div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Eagles</p>
-												<p class="slider__location">Native to South America</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/banana-bamboo.png"
-													alt="banana-bamboo">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="slider__item" id="card_03">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/card_03.jpg" alt="Gorillas">
-									</div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Gorillas</p>
-												<p class="slider__location">Native to Congo</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/banana-bamboo.png"
-													alt="banana-bamboo">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="slider__item" id="card_04">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/card_04.jpg"
-											alt="Two-toed Sloth"></div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Two-toed Sloth</p>
-												<p class="slider__location">Mesoamerica, South America</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/banana-bamboo.png"
-													alt="banana-bamboo">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="slider__item" id="card_05">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/card_05.jpg" alt="Cheetahs">
-									</div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Cheetahs</p>
-												<p class="slider__location">Native to Africa</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/meet-fish.png"
-													alt="meet-fish">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="slider__item" id="card_06">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/card_06.jpg" alt="Penguins">
-									</div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Penguins</p>
-												<p class="slider__location">Native to Antarctica</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/meet-fish.png"
-													alt="meet-fish">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="slider__item" id="card_07">
-								<div class="slider__item_wrapper">
-									<div class="slider__img"><img src="../../assets/images/animals/croco.jpg" alt="Alligators">
-									</div>
-									<div class="slider__text_animation">
-										<div class="slider__text_wrapper">
-											<div class="slider__text">
-												<p class="slider__title">Alligators</p>
-												<p class="slider__location">Native to Southeastern U. S.</p>
-											</div>
-											<div class="slider__icon"><img src="../../assets/icons/pick_feed/meet-fish.png"
-													alt="meet-fish">
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<!--div class="slider__item" id="card_08">
+					<div class="slider__wrapper">
+						<div class="pets__slider">
+							<div class="slider__items">
+								<div class="slider__item" id="card_01">
 									<div class="slider__item_wrapper">
 										<div class="slider__img"><img src="../../assets/images/animals/card_01.jpg"
 												alt="Giant Pandas">
@@ -235,8 +114,8 @@
 											</div>
 										</div>
 									</div>
-								</!--div>
-								<div class="slider__item" id="card_09">
+								</div>
+								<div class="slider__item" id="card_02">
 									<div class="slider__item_wrapper">
 										<div class="slider__img"><img src="../../assets/images/animals/card_02.jpg" alt="Eagles">
 										</div>
@@ -253,9 +132,10 @@
 										</div>
 									</div>
 								</div>
-								<div class="slider__item" id="card_10">
+								<div class="slider__item" id="card_03">
 									<div class="slider__item_wrapper">
-										<div class="slider__img"><img src="../../assets/images/animals/card_03.jpg" alt="Gorillas">
+										<div class="slider__img"><img src="../../assets/images/animals/card_03.jpg"
+												alt="Gorillas">
 										</div>
 										<div class="slider__text_animation">
 											<div class="slider__text_wrapper">
@@ -270,7 +150,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="slider__item" id="card_11">
+								<div class="slider__item" id="card_04">
 									<div class="slider__item_wrapper">
 										<div class="slider__img"><img src="../../assets/images/animals/card_04.jpg"
 												alt="Two-toed Sloth"></div>
@@ -287,9 +167,10 @@
 										</div>
 									</div>
 								</div>
-								<div-- class="slider__item" id="card_12">
+								<div class="slider__item" id="card_05">
 									<div class="slider__item_wrapper">
-										<div class="slider__img"><img src="../../assets/images/animals/card_05.jpg" alt="Cheetahs">
+										<div class="slider__img"><img src="../../assets/images/animals/card_05.jpg"
+												alt="Cheetahs">
 										</div>
 										<div class="slider__text_animation">
 											<div class="slider__text_wrapper">
@@ -303,15 +184,33 @@
 											</div>
 										</div>
 									</div>
-								</div-->
-
+								</div>
+								<div class="slider__item" id="card_06">
+									<div class="slider__item_wrapper">
+										<div class="slider__img"><img src="../../assets/images/animals/card_06.jpg"
+												alt="Penguins">
+										</div>
+										<div class="slider__text_animation">
+											<div class="slider__text_wrapper">
+												<div class="slider__text">
+													<p class="slider__title">Penguins</p>
+													<p class="slider__location">Native to Antarctica</p>
+												</div>
+												<div class="slider__icon"><img src="../../assets/icons/pick_feed/meet-fish.png"
+														alt="meet-fish">
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>								
+							</div>
 						</div>
-						<div class="slider-arrow arrow-prev">
-							<div><img src="../../assets/icons/arrows/prev.svg" alt=""></div>
-						</div>
-						<div class="slider-arrow arrow-next">
-							<div><img src="../../assets/icons/arrows/next.svg" alt=""></div>
-						</div>
+					</div>
+					<div class="slider-arrow arrow-prev">
+						<div><img src="../../assets/icons/arrows/prev.svg" alt=""></div>
+					</div>
+					<div class="slider-arrow arrow-next">
+						<div><img src="../../assets/icons/arrows/next.svg" alt=""></div>
 					</div>
 					<div class="pets__button"><a href="#">Choose your favorite</a></div>
 				</div>
@@ -518,7 +417,7 @@
 										<img src="../../assets/icons/users/user_05.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Michael John</div>
+										<div class="author-item__name">John Michael</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Today</div>
 										</div>
@@ -550,7 +449,7 @@
 										<img src="../../assets/icons/users/user_02.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Oskar Samborsky</div>
+										<div class="author-item__name">Samuel Frost</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Yesterday</div>
 										</div>
@@ -584,7 +483,7 @@
 										<img src="../../assets/icons/users/user_03.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Fredericka Michelin</div>
+										<div class="author-item__name">Michel Pharrel</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Today</div>
 										</div>
@@ -619,7 +518,7 @@
 										<img src="../../assets/icons/users/user_04.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Mila Riksha</div>
+										<div class="author-item__name">Mika Tompson</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Yesterday</div>
 										</div>
@@ -654,7 +553,7 @@
 										<img src="../../assets/icons/users/user_05.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Michael John</div>
+										<div class="author-item__name">John Miller</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Today</div>
 										</div>
@@ -686,7 +585,7 @@
 										<img src="../../assets/icons/users/user_02.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Oskar Samborsky</div>
+										<div class="author-item__name">Henrik Smith</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Yesterday</div>
 										</div>
@@ -720,7 +619,7 @@
 										<img src="../../assets/icons/users/user_03.svg" alt="avatar">
 									</div>
 									<div class="author-item__body">
-										<div class="author-item__name">Fredericka Michelin</div>
+										<div class="author-item__name">Teresa Brown</div>
 										<div class="author-item__data">
 											<div class="author-item__location">Local Austria &middot; Today</div>
 										</div>
