fix: add item to donate form
fix: add item to donate form

--- a/online-zoo3/pages/donate/donate.html
+++ b/online-zoo3/pages/donate/donate.html
@@ -98,57 +98,68 @@
 								<div class="form-donate__form-title">Amount</div>
 								<div class="form-donate__form-slider">
 									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun1"
-										value="2000">
-									<label for="radio-amoun1" class="form-donate__radio-amount-label" data-amount="$2000"
+										value="5000">
+									<label for="radio-amoun1" class="form-donate__radio-amount-label" data-amount="$5000"
 										id="amoun1">
+										<span class="form-donate__radio-dot"></span>
+										<span class="form-donate__radio-txt">$5000</span>
+									</label>
+
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun2"
+										value="2000">
+									<label for="radio-amoun2" class="form-donate__radio-amount-label" data-amount="$2000"
+										id="amoun2">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$2000</span>
 									</label>
 
-									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun2"
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun3"
 										value="1000">
-									<label for="radio-amoun2" class="form-donate__radio-amount-label" data-amount="$1000"
-										id="amoun2">
+									<label for="radio-amoun3" class="form-donate__radio-amount-label" data-amount="$1000"
+										id="amoun3">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$1000</span>
 									</label>
 
-									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun3"
-										value="500" checked>
-									<label for="radio-amoun3" class="form-donate__radio-amount-label" data-amount="$500">
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun4"
+										value="500">
+									<label for="radio-amoun4" class="form-donate__radio-amount-label" data-amount="$500"
+										id="amoun4">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$500</span>
 									</label>
 
-									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun4"
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun5"
 										value="250">
-									<label for="radio-amoun4" class="form-donate__radio-amount-label" data-amount="$250">
+									<label for="radio-amoun5" class="form-donate__radio-amount-label" data-amount="$250"
+										id="amoun5">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$250</span>
 									</label>
 
-									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun5"
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun6"
 										value="100">
-									<label for="radio-amoun5" class="form-donate__radio-amount-label active" data-amount="$100">
+									<label for="radio-amoun6" class="form-donate__radio-amount-label active" data-amount="$100"
+										id="amoun6">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$100</span>
 									</label>
 
-									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun6"
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun7"
 										value="50">
-									<label for="radio-amoun6" class="form-donate__radio-amount-label" data-amount="$50">
+									<label for="radio-amoun7" class="form-donate__radio-amount-label" data-amount="$50"
+										id="amoun7">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$50</span>
 									</label>
 
-									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun7"
+									<input type="radio" name="amount" class="form-donate__radio-amount" id="radio-amoun8"
 										value="25">
-									<label for="radio-amoun7" class="form-donate__radio-amount-label" data-amount="$25">
+									<label for="radio-amoun8" class="form-donate__radio-amount-label" data-amount="$25"
+										id="amoun8">
 										<span class="form-donate__radio-dot"></span>
 										<span class="form-donate__radio-txt">$25</span>
 									</label>
-
-
 								</div>
 								<div class="form-donate__wrapper">
 									<div class="form-donate__form-amount">
