--- a/song-bird/pages/main/index.html
+++ b/song-bird/pages/main/index.html
@@ -23,8 +23,11 @@
               <ul class="menu__list">
                 <li class="menu__item menu__link_active">About</li>
                 <li class="menu__item"><a href="../quiz/index.html" class="menu__link">Quiz</a></li>
-                <li class="menu__item"><a href="#" class="sound"><img src="../../assets/images/sound.png" alt="Sound"
-                      id="unmuteButton"></a></li>
+                <li class="menu__item">
+                  <a href="#" class="sound"><img src="../../assets/images/sound.png" alt="Sound" id="unmuteButton">
+                  </a>
+                  <div class="sound__off" id="sound__off"></div>
+                </li>
               </ul>
             </div>
           </nav>
@@ -33,17 +36,14 @@
     </header>
     <main class="main">
       <section class="main-screen">
-        <video autoplay muted loop id="video">
-          <source src="../../assets/video/bird_1280.mp4" type="video/mp4">
-        </video>
-
-      </section>
-      <div class="main-screen__body">
-        <div class="main-screen__container container">
+        <div class="main-screen__body">
           <h1>Listen to your favorite bird</h1>
           <div class="main-screen__button"><a href="../quiz/index.html">Start the quiz</a></div>
         </div>
-      </div>
+        <video preload="auto" autoplay muted loop id="video" class="video">
+          <source src="../../assets/video/bird_1920.mp4" type="video/mp4">
+        </video>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__container container">
