refactor: change style files of the project

--- a/song-bird/pages/quiz/index.html
+++ b/song-bird/pages/quiz/index.html
@@ -7,7 +7,7 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../main/css/style.css">
-  <link rel="stylesheet" href="css/style_quiz.css">
+  <!-- <link rel="stylesheet" href="css/style_quiz.css"> -->
 
   <title>Quiz</title>
 </head>
@@ -55,9 +55,9 @@
                           alt="play_button">
                       </div>
                       <div class="timebar">
+                        <div class="timebar-circle"></div>
                         <div class="timebar-track_color"></div>
                         <div class="timebar-track_white"></div>
-                        <div class="timebar-circle"></div>
                         <div class="timebar-info">
                           <div class="timebar-info__current-first">00:00</div>
                           <div class="timebar-info__end-first">00:00</div>
