--- a/song-bird/pages/main/index.html
+++ b/song-bird/pages/main/index.html
@@ -21,8 +21,8 @@
           <nav class="header__menu menu">
             <div class="menu__body">
               <ul class="menu__list">
-                <li class="menu__item menu__link_active">About</li>
-                <li class="menu__item"><a href="../quiz/index.html" class="menu__link">Quiz</a></li>
+                <li class="menu__item menu__link_active">Главная</li>
+                <li class="menu__item"><a href="../quiz/index.html" class="menu__link">Игра</a></li>
                 <li class="menu__item">
                   <a href="#" class="sound"><img src="../../assets/images/sound.png" alt="Sound" id="unmuteButton">
                   </a>
@@ -37,8 +37,8 @@
     <main class="main">
       <section class="main-screen">
         <div class="main-screen__body">
-          <h1>Listen to your favorite bird</h1>
-          <div class="main-screen__button"><a href="../quiz/index.html">Start the quiz</a></div>
+          <h1>Наслаждайтесь пением птиц</h1>
+          <div class="main-screen__button"><a href="../quiz/index.html">Начать игру</a></div>
         </div>
         <video preload="auto" autoplay muted loop id="video" class="video">
           <source src="../../assets/video/bird_1920.mp4" type="video/mp4">
